# refl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
dogfood/: cmds.py
src/: __init__.py  cmd_args.py  commands.py  interpret.py  refl.py
src/args/: __init__.py  agda.py  common.py  package.py  pkg.py  project.py  repl.py  version.py
src/config/: __init__.py  config.py
src/install/: __init__.py  switcher.py
src/util/: __init__.py  emojis.py  install.py  log.py  util.py
src/version/: switcher.py
test/: test.agda  test.agdai  test_commands.py
test/MAlonzo/: RTE.hi
test/MAlonzo/Code/: Qtest.hi  Qtest.hs
