[tool.poetry]
name = "refl"
version = "0.1.0"
description = ""
authors = ["ixaxaar <root@ixaxaar.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
GitPython = "^3.1.14"
pyunpack = "^0.2.2"
tqdm = "^4.60.0"
requests = "^2.25.1"
filetype = "^1.0.7"
PyYAML = "^5.4.1"
click = "^7.1.2"
coloredlogs = "^15.0"
file-downloader = "^0.5.1"
patool = "^1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
